# Pepper

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  cmake-variants.yaml  readme.md  renderer.txt
App/: Voronoi.txt
App/assets/shaders/: ColorOrTexture.glsl  FlatColor.glsl  PixelateTexture.glsl  Simple.glsl  Texture.glsl
App/src/: Application.cpp  ClientApp.cpp  ClientApp.hpp  Color.cpp  Color.hpp  Constants.hpp  DiagramLayer.cpp  DiagramLayer.hpp  ExampleLayer.cpp  ExampleLayer.hpp  GameLayer.cpp  GameLayer.hpp  Geom.cpp  Geom.hpp  GridSquare.cpp  GridSquare.hpp  IO.cpp  IO.hpp  Level.cpp  Level.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Planet.cpp  Planet.hpp  Player.cpp  Player.hpp  PointsCmp.hpp  Random.cpp  Random.hpp  Sandbox2D.cpp  Sandbox2D.hpp  Session.cpp  Session.hpp  StarsSystem.cpp  StarsSystem.hpp  TetrisApp.cpp  TetrisApp.hpp  Utilities.cpp  Utilities.hpp  VoronoiApp.cpp  (+3 more)
App/src/DCEL/: dcel.cpp  dcel.hpp
App/src/GridVoronoi/: GridVoronoi.cpp  GridVoronoi.hpp
App/src/Pieces/: Piece.cpp  Piece.hpp  SPiece.cpp  SPiece.hpp
App/src/VoronoiFortune/: VoronoiDiagramGenerator.cpp  VoronoiDiagramGenerator.h
App/tests/: TestUtilities.cpp
Butter/src/: Butter.hpp  ButterPCH.hpp  Test.cpp  Test.hpp
Butter/src/Butter/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Log.cpp  Log.hpp  Window.hpp
Butter/src/Butter/Events/: Event.cpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Butter/src/Platform/: WinWindow.cpp  WinWindow.hpp
Pepper/include/: Pepper.hpp  PepperPCH.hpp
Pepper/include/Pepper/: OrthoCameraController.hpp
Pepper/include/Pepper/Core/: Application.hpp  Colors.hpp  Core.hpp  EntryPoint.hpp  Log.hpp  OrthoCameraController.hpp  Utils.hpp  Window.hpp
Pepper/include/Pepper/Events/: Event.hpp  EventDispatcher.hpp  EventInfo.hpp  KeyEvent.hpp  WindowEvent.hpp
Pepper/include/Pepper/Input/: Input.hpp  KeyCodes.hpp  MouseButtonCodes.hpp
Pepper/include/Pepper/Layers/: LayerStack.hpp
Pepper/include/Pepper/Layers/ImGui/: ImGuiLayer.hpp
Pepper/include/Pepper/Platform/OpenGL/: OpenGLBuffer.hpp  OpenGLContext.hpp  OpenGLDebugger.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture.hpp
Pepper/include/Pepper/Platform/Windows/: WinInput.hpp  WinWindow.hpp
Pepper/include/Pepper/Profiling/: Profiler.hpp  ProfilerData.hpp  Timer.hpp
Pepper/include/Pepper/Renderer/: Buffer.hpp  BufferElement.hpp  BufferLayout.hpp  GraphicsContext.hpp  OrthoCamera.hpp  RenderCommand.hpp  Renderer.hpp  Renderer2D.hpp  RendererAPI.hpp  Shader.hpp  ShaderLibrary.hpp  Texture.hpp  VertexArray.hpp
Pepper/include/Pepper/Utilities/: Random.hpp
Pepper/src/: Application.cpp  Buffer.cpp  BufferElement.cpp  BufferLayout.cpp  Event.cpp  ImGuiLayer.cpp  Input.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLDebugger.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OrthoCamera.cpp  OrthoCameraController.cpp  Pepper.hpp  PepperPCH.hpp  Profiler.cpp  ProfilerData.cpp  Random.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  RendererAPI.cpp  Shader.cpp  ShaderLibrary.cpp  Texture.cpp  Timer.cpp  Utils.cpp  VertexArray.cpp  WinInput.cpp  WinWindow.cpp
Pepper/src/Pepper/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  MouseButtonCodes.hpp  OrthoCameraController.cpp  OrthoCameraController.hpp  Window.hpp
Pepper/src/Pepper/Core/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Log.cpp  Log.hpp  TimeStep.hpp  Timestep.hpp  Utils.cpp  Utils.hpp  Window.hpp
Pepper/src/Pepper/Events/: Event.cpp  Event.hpp  EventCategory.hpp  EventDispatcher.hpp  EventInfo.hpp  EventType.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Pepper/src/Pepper/ImGui/: ImGuiLayer.cpp  ImGuiLayer.hpp
Pepper/src/Pepper/Input/: Input.cpp  Input.hpp
Pepper/src/Pepper/Layers/: Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp
Pepper/src/Pepper/Layers/ImGui/: ImGuiLayer.cpp
Pepper/src/Pepper/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLDebugger.cpp  OpenGLDebugger.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
Pepper/src/Pepper/Platform/Windows/: WinInput.cpp  WinWindow.cpp  WinWindow.hpp
Pepper/src/Pepper/Renderer/: Buffer.cpp  Buffer.hpp  BufferElement.hpp  BufferLayout.cpp  BufferLayout.hpp  OrthoCamera.cpp  OrthoCamera.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
Pepper/src/Platform/: WinInput.cpp  WinInput.hpp  WinWindow.cpp  WinWindow.hpp
Pepper/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLReneder.hpp  OpenGLBuffer.cpp  OpenGLBuffer.hpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLRendererAPI.cpp  OpenGLRendererAPI.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp
Pepper/src/Platform/Windows/: WinInput.cpp  WinInput.hpp  WinWindow.cpp  WinWindow.hpp
Pepper/src/Renderer/: Buffer.cpp  Buffer.hpp  GraphicsContext.hpp  OrthoCamera.cpp  OrthoCamera.hpp  RenderCommand.cpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp
